--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,28 @@ nav a {
 }
 
 .logo-npm {
-  height: 3%;
-  width: 12%
+  height: 40px;
+  width: 100px;
+  margin: 10px;
 }
 
 .logo-bear{
-  height: 3%;
-  width: 3%;
+  height: 40px;
+  width: 40px;
+  margin-top: 5px;
+}
+
+.header .sign-in-log-in, .header .sign-in-log-in a{
+  color: rgba(255,255,255,0.8);
+}
+
+.sign-in-log-in{
+  margin-top: 20px;
+}
+
+.horizontal-align {
+  float: left;
+
 }
 
 .header {
@@ -71,8 +86,13 @@ nav a {
 
 .search-bar {
   background-color: rgb(31, 82, 111);
-  height: 30%;
-  width: 70%;
+  height: 40px;
+  width: 900px;
+  margin: 10px 5px 10px 0px;
+  border-color: rgba(255,255,255,0.5);
+  border-style: solid;
+  border-width: 1px;
+  text-indent: 10px;
 }
 
 .collaboration-section {
